--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/baseline_home_24"
         android:title="Home"/>
     <item
-        android:id="@+id/item_2"
+        android:id="@+id/profile"
         android:enabled="true"
         android:icon="@drawable/baseline_person_24"
         android:title="Profile"/>
